--- a/index.html
+++ b/index.html
@@ -2,36 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./scss/style.css">  
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <img src="./images/pattern-background-desktop.svg" class="main-bg" alt="">
 
-  Order Summary
+  <main class="container">
+    <!-- hero image -->
+    <div class="image">
+      <img src="./images/illustration-hero.svg" alt="">
+    </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <!-- text -->
+    <div class="text">
+      <h1>Order Summary</h1>
+      <p>ou can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
 
-  Annual Plan
-  $59.99/year
+      <div class="plan">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"><g fill="none" fill-rule="evenodd"><circle cx="24" cy="24" r="24" fill="#DFE6FB"/><path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"/></g></svg>
+          <div>
+            <span>Annual Plan</span><br>
+            <span>&dollar;59.99/year</span>
+          </div>          
+        </div>
 
-  Change
+        <a href="#">Change</a>
+      </div>
 
-  Proceed to Payment
-  Cancel Order
+      <button type="button" class="cta">Proceed to Payment</button>
+      <button type="button">Cancel Order</button>
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
